Bug 559217 - Browser freezes due a lock contentions across Places statements. r=sdwilsh